# imagenet_example

./: README.md  README.rst  main.py  prepare_data.py  pyproject.toml
scripts/: job.sh  safe_job.sh
