[project]
name = "distributed-imagenet-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "debugpy>=1.8.16",
    "scipy>=1.16.2",
    "torch>=2.7.1",
    "torch-tb-profiler>=0.4.3",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "rich>=14.1.0",
    "simple-parsing>=0.1.7",
    "scikit-learn>=1.7.2",
    "wandb>=0.21.4",
    "tensorboard>=2.20.0",
]

#ruff: increase max line length
[tool.ruff]
line-length = 100


[tool.cluv]
results_path = "checkpoints"

[tool.cluv.env]
# Environment variables applied when using Slurm commands on all clusters.
SBATCH_TIME = "3:00:00"
SBATCH_REQUEUE = "1"

[tool.cluv.clusters.mila]
env = {UV_OFFLINE="0", WANDB_MODE="online"}

# PAICE clusters.
[tool.cluv.clusters.tamia]
env = {UV_OFFLINE="1", WANDB_MODE="offline"}

[tool.cluv.clusters.killarney]
env = {UV_OFFLINE="1", WANDB_MODE="offline"}

[tool.cluv.clusters.vulcan]
env = {UV_OFFLINE="1", WANDB_MODE="offline"}

# DRAC clusters.
[tool.cluv.clusters.rorqual]
env = {UV_OFFLINE="1", WANDB_MODE="offline", SBATCH_ACCOUNT="rrg-bengioy-ad"}

[tool.cluv.clusters.fir]
env = {UV_OFFLINE="0", WANDB_MODE="online", SBATCH_ACCOUNT="rrg-bengioy-ad"}

[tool.cluv.clusters.nibi]
env = {UV_OFFLINE="0", WANDB_MODE="online", SBATCH_ACCOUNT="rrg-bengioy-ad"}

[tool.cluv.clusters.trillium]
env = {UV_OFFLINE="1", WANDB_MODE="offline", SBATCH_ACCOUNT="rrg-bengioy-ad"}

[tool.cluv.clusters.trillium-gpu]
env = {UV_OFFLINE="1", WANDB_MODE="offline", SBATCH_ACCOUNT="rrg-bengioy-ad"}

[tool.cluv.clusters.narval]
# Mila doesn't have an allocation on Narval anymore.
# You can also use "def-yourusername" (the default partitions).
env = {UV_OFFLINE="1", WANDB_MODE="offline", SBATCH_ACCOUNT="def-bengioy"}
